# YeetAI

./: .env.example  .gitignore  .gitmodules  README.md  install_hook.py  pyproject.toml
.github/workflows/: add-license.yml
modules/: ask.py  start.py
scripts/: add_license.py  install_hook.py
src/: Bot.py  Command.py  Logging.py  Module.py  __init__.py  __main__.py
src/commands/: README.md  ask.py
src/commands/AI/: ask.py
src/commands/Core/: start.py
src/modules/: start.py
testing/: test_bing.py
tests/: test_bing.py  test_freechatgpt.py
