[tool.poetry]
name = "YeetAI"
version = "0.1.0"
description = "A Telegram chat bot with support for multiple LLMs!"
authors = ["YeetCode Developers <YeetCode-devs@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
g4f = {extras = ["all"], version = "^0.2.5.4"}
pyrogram = {extras = ["all"], version = "^2.0.106"}
python-dotenv = "^1.0.1"
tgcrypto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
