[tool.poetry]
name = "YeetAI"
version = "0.1.0"
description = "A Telegram chat bot with support for multiple LLMs!"
authors = ["YeetCode Developers <YeetCode-devs@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
g4f = {extras = ["all"], version = "^0.2.5.4"}
telethon = "^1.34.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
isort = "^5.13.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
